Fix connection modal style issues (#8433)
Resolves three different style issues due to overflow of content
and addresses an issue where UI was being squished due to available
screen real estate.

- On the choose account modal, when a user has enough accounts to need
to scroll within the account chooser, the last-connected data column
was squished. This is resolved by using a tooltip and icon for this data
rather than text printed in column.
- On the connection permission result screen where it shows the Dapp icon ->
Metamask icon, the bottom of the logos and dropshadows were being cut off
this was resolved by removing the height set on this element and allowing
it to fill the available space.
- On the confirmation screen the content appeared off center due to the scrollbar being overlayed instead of auto. This was resolved by removing some of the setting of manual overflow controls on the body element.

--- a/ui/app/pages/permissions-connect/choose-account/index.scss
+++ b/ui/app/pages/permissions-connect/choose-account/index.scss
@@ -7,6 +7,17 @@
   margin-right: auto;
   height: 100%;
 
+  .fa-info-circle {
+    color: $Grey-200;
+    cursor: pointer;
+    margin-left: 8px;
+    font-size: 0.9rem;
+  }
+
+  .fa-info-circle:hover {
+    color: $Grey-300;
+  }
+
   @media screen and (min-width: 576px) {
     width: 426px;
   }
@@ -60,6 +71,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    min-width:0;
   }
 
   &__list-check-box {
@@ -78,21 +90,6 @@
     display: flex;
     margin-left: 16px;
     align-items: center;
-
-    .fa-info-circle, .fa-info-circle:hover {
-      color: $silver;
-      cursor: pointer;
-      margin-left: 8px;
-      font-size: 0.9rem;
-    }
-
-    .fa-info-circle {
-      cursor: pointer;
-    }
-
-    .fa-info-circle:hover {
-      color: $mid-gray;
-    }
   }
 
   &__account {
@@ -115,11 +112,15 @@
       display: flex;
       flex-direction: column;
       margin-left: 16px;
+      min-width: 0;
     }
 
     &__label {
       @extend %content-text;
       color: $Black-100;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
 
     &__balance {
